--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       </div>
 
       <div class="textContainer">
-        <p id="header">Happy Valentine's Day, Delyana!</p>
-        <p>Will you be my Valentine?</p>
+        <p id="header">Happy Almost Valentine's Day, Dudana!</p>
+        <p>IF YOU WERE A FRUIT, YOU'D BE A FINEAPPLE
+        <p>Will you be my Valentine, please?</p>
         <p>Yes /\/\/\/\/\/\/\/\/\/\/\ No</p>
       </div>
     </div>
